--- a/index.html
+++ b/index.html
@@ -3,31 +3,163 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>W4RAS | STORE</title>
+    <title>W4RAS STORE | Trusted Market</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        body { background-color: #020617; color: white; }
-        .card { transition: all 0.3s ease; border: 1px solid #1e293b; }
-        .card:hover { transform: translateY(-8px); border-color: #3b82f6; }
+        @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap');
+        body { font-family: 'Plus Jakarta Sans', sans-serif; background-color: #020617; color: white; }
+        .glass { background: rgba(15, 23, 42, 0.8); backdrop-filter: blur(12px); border: 1px solid rgba(255,255,255,0.05); }
+        .card-product { transition: all 0.3s ease; border: 1px solid #1e293b; position: relative; overflow: hidden; }
+        .card-product:hover { transform: translateY(-8px); border-color: #3b82f6; box-shadow: 0 0 20px rgba(59, 130, 246, 0.3); }
+        .badge-hot { position: absolute; top: 10px; right: -30px; background: #ef4444; transform: rotate(45deg); width: 100px; text-align: center; font-size: 10px; font-weight: bold; }
     </style>
 </head>
-<body class="p-6">
-    <nav class="flex justify-between items-center mb-10 bg-slate-900/50 p-5 rounded-2xl border border-slate-800">
-        <h1 class="text-3xl font-black text-blue-500">W4RAS STORE</h1>
-        <div class="space-x-4">
-            <a href="#" class="bg-blue-600 px-6 py-2 rounded-full font-bold">Login</a>
+<body class="pb-24">
+
+    <nav class="sticky top-0 z-50 glass px-6 py-4 flex justify-between items-center">
+        <div class="flex items-center gap-3">
+            <div class="w-10 h-10 bg-gradient-to-br from-blue-500 to-blue-700 rounded-xl flex items-center justify-center shadow-lg shadow-blue-500/50">
+                <i class="fa-solid fa-bolt text-white"></i>
+            </div>
+            <h1 class="text-2xl font-black tracking-tighter italic">W4RAS<span class="text-blue-500">STORE</span></h1>
+        </div>
+        <div class="hidden md:flex gap-6 text-sm font-semibold text-slate-400">
+            <a href="#" class="hover:text-blue-500 transition">Beranda</a>
+            <a href="#produk" class="hover:text-blue-500 transition">Produk</a>
+            <a href="#testi" class="hover:text-blue-500 transition">Testimoni</a>
         </div>
     </nav>
 
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto">
-        <div class="card bg-slate-900 p-5 rounded-2xl">
-            <h2 class="text-xl font-bold mb-2">BOKEPl</h2>
-            <p class="text-slate-400 text-sm mb-6">Undetected & Aman.</p>
-            <div class="flex justify-between items-center">
-                <span class="text-2xl font-bold text-green-400">Rp 150.000</span>
-                <button class="bg-blue-600 px-5 py-2 rounded-lg">Beli</button>
+    <div class="px-4 mt-6">
+        <div class="max-w-6xl mx-auto rounded-3xl p-8 bg-gradient-to-r from-blue-700 via-blue-600 to-indigo-800 shadow-2xl relative overflow-hidden">
+            <div class="relative z-10">
+                <span class="bg-white/20 px-4 py-1 rounded-full text-xs font-bold uppercase tracking-widest">Flash Sale</span>
+                <h2 class="text-4xl font-extrabold mt-2 mb-2">CHEAPEST & FASTEST</h2>
+                <p class="text-blue-100 max-w-md">Dapatkan cheat, software, dan akun premium dengan harga kaki lima kualitas bintang lima.</p>
             </div>
+            <i class="fa-solid fa-gamepad absolute -right-10 -bottom-10 text-[150px] opacity-10 rotate-12"></i>
         </div>
     </div>
+
+    <div class="max-w-6xl mx-auto px-4 mt-8">
+        <div class="glass rounded-2xl p-4 flex flex-wrap justify-center gap-6 grayscale opacity-70 hover:grayscale-0 hover:opacity-100 transition duration-500">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/QRIS_logo.svg/1200px-QRIS_logo.svg.png" class="h-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/72/Logo_dana_blue.svg/1200px-Logo_dana_blue.svg.png" class="h-5">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Logo_ovo_purple.svg/1200px-Logo_ovo_purple.svg.png" class="h-5">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Bank_Mandiri_logo_2016.svg/1200px-Bank_Mandiri_logo_2016.svg.png" class="h-4">
+        </div>
+    </div>
+
+    <main id="produk" class="max-w-6xl mx-auto px-4 mt-12">
+        <div class="flex items-center gap-3 mb-8">
+            <div class="h-8 w-2 bg-blue-600 rounded-full"></div>
+            <h3 class="text-2xl font-bold">Produk Unggulan</h3>
+        </div>
+
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+            
+            <div class="card-product glass p-4 rounded-3xl">
+                <div class="badge-hot">HOT SALE</div>
+                <img src="https://via.placeholder.com/400x300/1e293b/ffffff?text=FIVEM+EXTERNAL" class="w-full h-40 object-cover rounded-2xl mb-4">
+                <h4 class="font-bold text-lg mb-1 leading-tight">FiveM External Premium</h4>
+                <div class="flex items-center gap-1 text-[10px] text-green-400 font-bold mb-4">
+                    <i class="fa-solid fa-circle-check"></i> UNDETECTED
+                </div>
+                <div class="flex flex-col gap-3 mt-auto">
+                    <div>
+                        <p class="text-[10px] text-slate-500 line-through">Rp 250.000</p>
+                        <p class="text-xl font-black text-blue-500">Rp 150.000</p>
+                    </div>
+                    <a href="https://wa.me/6282136209644?text=Halo+W4RAS+STORE,+saya+mau+order+FiveM+External" class="w-full bg-blue-600 hover:bg-blue-500 py-3 rounded-xl text-center text-xs font-black transition shadow-lg shadow-blue-600/20 uppercase tracking-tighter">Beli Langsung</a>
+                </div>
+            </div>
+
+            <div class="card-product glass p-4 rounded-3xl">
+                <img src="https://via.placeholder.com/400x300/1e293b/ffffff?text=VALORANT+SUNTIK" class="w-full h-40 object-cover rounded-2xl mb-4">
+                <h4 class="font-bold text-lg mb-1 leading-tight">Suntik Skin Valorant</h4>
+                <div class="flex items-center gap-1 text-[10px] text-yellow-400 font-bold mb-4">
+                    <i class="fa-solid fa-clock"></i> PROSES 5 MENIT
+                </div>
+                <div class="flex flex-col gap-3 mt-auto">
+                    <div>
+                        <p class="text-[10px] text-slate-500 line-through">Rp 100.000</p>
+                        <p class="text-xl font-black text-blue-500">Rp 45.000</p>
+                    </div>
+                    <a href="https://wa.me/6282136209644?text=Halo+W4RAS+STORE,+saya+mau+order+Suntik+Skin+Valorant" class="w-full bg-blue-600 hover:bg-blue-500 py-3 rounded-xl text-center text-xs font-black transition shadow-lg shadow-blue-600/20 uppercase tracking-tighter">Beli Langsung</a>
+                </div>
+            </div>
+
+            <div class="card-product glass p-4 rounded-3xl">
+                <img src="https://via.placeholder.com/400x300/1e293b/ffffff?text=NETFLIX+PREMIUM" class="w-full h-40 object-cover rounded-2xl mb-4">
+                <h4 class="font-bold text-lg mb-1 leading-tight">Netflix 4K Ultra HD</h4>
+                <div class="flex items-center gap-1 text-[10px] text-blue-400 font-bold mb-4">
+                    <i class="fa-solid fa-shield-halved"></i> FULL GARANSI
+                </div>
+                <div class="flex flex-col gap-3 mt-auto">
+                    <div>
+                        <p class="text-[10px] text-slate-500 line-through">Rp 186.000</p>
+                        <p class="text-xl font-black text-blue-500">Rp 35.000</p>
+                    </div>
+                    <a href="https://wa.me/6282136209644?text=Halo+W4RAS+STORE,+saya+mau+order+Netflix+Premium" class="w-full bg-blue-600 hover:bg-blue-500 py-3 rounded-xl text-center text-xs font-black transition shadow-lg shadow-blue-600/20 uppercase tracking-tighter">Beli Langsung</a>
+                </div>
+            </div>
+
+            <div class="card-product glass p-4 rounded-3xl">
+                <img src="https://via.placeholder.com/400x300/1e293b/ffffff?text=YOUTUBE+PREM" class="w-full h-40 object-cover rounded-2xl mb-4">
+                <h4 class="font-bold text-lg mb-1 leading-tight">YouTube Premium</h4>
+                <div class="flex items-center gap-1 text-[10px] text-purple-400 font-bold mb-4">
+                    <i class="fa-solid fa-star"></i> NO ADS / LEGAL
+                </div>
+                <div class="flex flex-col gap-3 mt-auto">
+                    <div>
+                        <p class="text-[10px] text-slate-500 line-through">Rp 59.000</p>
+                        <p class="text-xl font-black text-blue-500">Rp 10.000</p>
+                    </div>
+                    <a href="https://wa.me/6282136209644?text=Halo+W4RAS+STORE,+saya+mau+order+YouTube+Premium" class="w-full bg-blue-600 hover:bg-blue-500 py-3 rounded-xl text-center text-xs font-black transition shadow-lg shadow-blue-600/20 uppercase tracking-tighter">Beli Langsung</a>
+                </div>
+            </div>
+
+        </div>
+    </main>
+
+    <section id="testi" class="max-w-6xl mx-auto px-4 mt-20">
+        <h3 class="text-center text-2xl font-bold mb-10">Apa Kata Mereka?</h3>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+            <div class="glass p-6 rounded-3xl border-l-4 border-blue-500">
+                <p class="text-sm italic text-slate-300">"Gila sih, order FiveM di W4RAS beneran aman. Fast respon parah!"</p>
+                <div class="mt-4 flex items-center gap-2">
+                    <div class="w-8 h-8 bg-slate-700 rounded-full"></div>
+                    <span class="text-xs font-bold">@alex_gaming</span>
+                </div>
+            </div>
+            <div class="glass p-6 rounded-3xl border-l-4 border-blue-500">
+                <p class="text-sm italic text-slate-300">"Suntik skin Valorant cuma 5 menit langsung masuk. Recomended!"</p>
+                <div class="mt-4 flex items-center gap-2">
+                    <div class="w-8 h-8 bg-slate-700 rounded-full"></div>
+                    <span class="text-xs font-bold">@vlrnt_pro</span>
+                </div>
+            </div>
+            <div class="glass p-6 rounded-3xl border-l-4 border-blue-500">
+                <p class="text-sm italic text-slate-300">"Netflix murah tapi kualitas premium. Udah langganan 3 bulan aman."</p>
+                <div class="mt-4 flex items-center gap-2">
+                    <div class="w-8 h-8 bg-slate-700 rounded-full"></div>
+                    <span class="text-xs font-bold">@dina_store</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="mt-20 border-t border-slate-800 p-10 text-center">
+        <p class="text-slate-500 text-sm">&copy; 2026 W4RAS STORE. All Rights Reserved.</p>
+    </footer class="mt-20 border-t border-slate-800 p-10 text-center">
+
+    <div class="fixed bottom-0 left-0 right-0 glass border-t border-white/5 px-10 py-4 flex justify-between items-center md:hidden z-50">
+        <a href="#" class="text-blue-500 text-xl"><i class="fa-solid fa-house"></i></a>
+        <a href="#produk" class="text-slate-400 text-xl"><i class="fa-solid fa-box-open"></i></a>
+        <a href="#testi" class="text-slate-400 text-xl"><i class="fa-solid fa-comment-dots"></i></a>
+        <a href="https://wa.me/6282136209644" class="text-slate-400 text-xl"><i class="fa-brands fa-whatsapp"></i></a>
+    </div>
+
 </body>
 </html>
