--- a/index.html
+++ b/index.html
@@ -104,6 +104,19 @@
                 </div>
             </div>
 
+            <div class="card-discord p-4 rounded-3xl">
+    <div class="img-container">
+        <img src="LINK_GAMBAR_DISINI">
+    </div>
+    <h4 class="font-bold text-xs mb-4 uppercase italic">BOKEP</h4>
+    <div class="mt-auto">
+        <div class="bg-white/5 p-3 rounded-xl mb-3">
+            <p class="text-lg font-black text-[#5865F2]">Rp 100</p>
+        </div>
+        <a href=""https://discord.gg/aB5HqUkNQK" target="_blank" class="btn-discord w-full py-2 rounded-xl text-[10px] font-black text-center uppercase text-white">Open Ticket</a>
+    </div>
+</div>
+
         </div>
     </main>
 
