--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
 
             <div class="card-discord p-4 rounded-3xl">
     <div class="img-container">
-        <img src="LINK_GAMBAR_DISINI">
+        <img src="https://cdn.discordapp.com/attachments/1457989439694311519/1467535665037312152/FiveM.jfif?ex=698e9458&is=698d42d8&hm=ff89ebe4b933547bdffc2bc0b3a078e331c530cf17de934685338a2d30140a7d&">
     </div>
-    <h4 class="font-bold text-xs mb-4 uppercase italic">BOKEP</h4>
+    <h4 class="font-bold text-xs mb-4 uppercase italic">Melolo</h4>
     <div class="mt-auto">
         <div class="bg-white/5 p-3 rounded-xl mb-3">
-            <p class="text-lg font-black text-[#5865F2]">Rp 100</p>
+            <p class="text-lg font-black text-[#5865F2]">Rp 20.000</p>
         </div>
         <a href=""https://discord.gg/aB5HqUkNQK" target="_blank" class="btn-discord w-full py-2 rounded-xl text-[10px] font-black text-center uppercase text-white">Open Ticket</a>
     </div>
