--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
     <div class="img-container">
         <img src="https://cdn.discordapp.com/attachments/1457989439694311519/1467535665037312152/FiveM.jfif?ex=698e9458&is=698d42d8&hm=ff89ebe4b933547bdffc2bc0b3a078e331c530cf17de934685338a2d30140a7d&">
     </div>
-    <h4 class="font-bold text-xs mb-4 uppercase italic">Melolo</h4>
+    <h4 class="font-bold text-xs mb-4 uppercase italic">OPTIMIZE PC</h4>
     <div class="mt-auto">
         <div class="bg-white/5 p-3 rounded-xl mb-3">
-            <p class="text-lg font-black text-[#5865F2]">Rp 20.000</p>
+            <p class="text-lg font-black text-[#5865F2]">Rp 55.000</p>
         </div>
         <a href=""https://discord.gg/aB5HqUkNQK" target="_blank" class="btn-discord w-full py-2 rounded-xl text-[10px] font-black text-center uppercase text-white">Open Ticket</a>
     </div>
@@ -121,7 +121,7 @@
     </main>
 
     <footer class="mt-24 border-t border-white/5 p-12 text-center text-slate-600 text-[10px] font-black uppercase tracking-[0.4em]">
-        &copy; 2026 W4RAS STORE - PRO GAMING MARKET
+        &copy; 2011 W4RAS STORE - PRO GAMING MARKET
     </footer>
 
 </body>
