--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             
             <div class="card-discord p-4 rounded-3xl">
                 <div class="img-container">
-                    <img src="https://socialclub.rockstargames.com/mweb/img/rockstar-logo-gold.png">
+                    <img src="https://cdn.discordapp.com/attachments/1457989439694311519/1471411355247443990/Rockstar_logo_for_tweets.png?ex=698ed61c&is=698d849c&hm=0ea8aa57a66d893c107fcb1c4fcd3cc95a638e80e29af6f9e7c43ad5fd3e16ce&">
                 </div>
                 <h4 class="font-bold text-xs mb-4 uppercase italic">ROCKSTAR ACCOUNT</h4>
                 <div class="mt-auto">
