--- a/index.html
+++ b/index.html
@@ -117,11 +117,24 @@
     </div>
 </div>
 
+            <div class="card-discord p-4 rounded-3xl">
+    <div class="img-container">
+        <img src="https://cdn.discordapp.com/attachments/1457989439694311519/1471411679077204113/images_3.png?ex=698ed669&is=698d84e9&hm=759fc1f9d00dae70bbd3f7080d74dab394d002d22298dbebe69dd2a379fa22be&">
+    </div>
+    <h4 class="font-bold text-xs mb-4 uppercase italic">Steam</h4>
+    <div class="mt-auto">
+        <div class="bg-white/5 p-3 rounded-xl mb-3">
+            <p class="text-lg font-black text-[#5865F2]">Rp 1.500</p>
+        </div>
+        <a href="https://discord.gg/aB5HqUkNQK" target="_blank" class="btn-discord w-full py-2 rounded-xl text-[10px] font-black text-center uppercase text-white">Open Ticket</a>
+    </div>
+</div>
+
         </div>
     </main>
 
     <footer class="mt-24 border-t border-white/5 p-12 text-center text-slate-600 text-[10px] font-black uppercase tracking-[0.4em]">
-        &copy; 2011 W4RAS STORE - PRO GAMING MARKET
+        &copy; 2011 W4RAS STORE - BY WIRA
     </footer>
 
 </body>
