--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>W4RAS STORE | PREMIUM MARKET</title>
+    <title>W4RAS STORE | #1 DI DUNIA</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -100,7 +100,7 @@
     <nav class="sticky top-0 z-50 glass px-8 py-5 flex justify-between items-center mx-4 mt-4 rounded-3xl">
         <div class="flex items-center gap-3">
             <img src="https://cdn.discordapp.com/attachments/1457996020876316724/1470800880814133430/W4RAAS.png?ex=698e97d0&is=698d4650&hm=35d9dff68ff8cab6885cb6c39d34a9ca347de8d2fa96ca766ec17dfed8232af8&" class="w-10 h-10 rounded-full border border-green-500/50 shadow-lg shadow-green-500/20">
-            <h1 class="text-xl font-black tracking-tighter italic">W4RAS<span class="text-green-500">STORE</span></h1>
+            <h1 class="text-xl font-black tracking-tighter italic uppercase">W4RAS<span class="text-green-500">STORE</span></h1>
         </div>
         
         <div class="flex items-center gap-4">
@@ -118,8 +118,8 @@
 
     <div class="relative pt-32 pb-24 px-4 text-center">
         <span class="px-4 py-2 rounded-full glass text-[10px] font-bold text-green-500 uppercase tracking-[0.3em] mb-6 inline-block">Trusted Gaming Market</span>
-        <h2 class="text-6xl md:text-8xl font-black mb-6 tracking-tighter uppercase italic leading-none">
-            UNLEASH <br> <span class="text-green-500">THE POWER.</span>
+        <h2 class="text-5xl md:text-8xl font-black mb-6 tracking-tighter uppercase italic leading-none">
+            W4RAS STORE ONTOP <br> <span class="text-green-500">#1 DI DUNIA.</span>
         </h2>
         <p class="text-slate-400 max-w-xl mx-auto text-sm font-medium leading-relaxed">Penyedia akun premium kualitas bintang lima dengan harga ramah dikantong.</p>
     </div>
@@ -206,7 +206,7 @@
             <div class="bg-white p-3 rounded-3xl inline-block shadow-2xl shadow-green-500/20">
                 <img src="https://cdn.discordapp.com/attachments/1464997913695358978/1464999511788093440/QRIS.png?ex=698e94dd&is=698d435d&hm=fecb8bc9557639bc4a29799f6d2edc488f0f920784871a574e62782da9665f5d" class="w-full max-w-[240px]">
             </div>
-            <p class="text-[10px] font-black mt-4 uppercase tracking-tighter text-slate-400 italic italic">Scan to Pay • W4RAS Store</p>
+            <p class="text-[10px] font-black mt-4 uppercase tracking-tighter text-slate-400 italic">Scan to Pay • W4RAS Store</p>
             <button onclick="window.open('https://discord.gg/aB5HqUkNQK')" class="w-full mt-6 bg-[#5865F2] py-4 rounded-2xl text-[10px] font-black uppercase text-white transition-all hover:brightness-110 flex items-center justify-center gap-2">
                 <i class="fa-brands fa-discord text-lg"></i> Konfirmasi ke Discord
             </button>
@@ -214,7 +214,7 @@
     </div>
 
     <footer class="mt-32 p-12 text-center text-slate-600 text-[9px] font-black uppercase tracking-[0.5em] opacity-40">
-        &copy; 2026 W4RAS STORE • PRO MARKET
+        &copy; 2026 W4RAS STORE • ONTOP #1 DI DUNIA
     </footer>
 
     <script>
