--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         .btn-green { background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%); transition: 0.3s; border-radius: 14px; }
         .btn-green:hover { transform: translateY(-2px); box-shadow: 0 10px 20px rgba(34, 197, 94, 0.3); }
         .img-container { width: 100%; height: 160px; overflow: hidden; border-radius: 1.25rem; background: rgba(0,0,0,0.3); display: flex; justify-content: center; align-items: center; }
+        .img-container img { max-width: 80%; max-height: 80%; object-fit: contain; }
         .modal { display: none; position: fixed; z-index: 100; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); backdrop-filter: blur(12px); }
         .modal-content { background: #0f0f13; margin: 2% auto; padding: 30px; border: 1px solid rgba(34, 197, 94, 0.2); width: 95%; max-width: 450px; border-radius: 30px; position: relative; }
         .close-modal { position: absolute; right: 20px; top: 15px; font-size: 20px; cursor: pointer; color: #555; }
@@ -50,7 +51,7 @@
     </div>
 
     <main class="max-w-6xl mx-auto px-6">
-        <div id="product-grid" class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-8"></div>
+        <div id="product-grid" class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-8 pb-20"></div>
     </main>
 
     <div id="adminModal" class="modal">
@@ -60,14 +61,14 @@
             
             <div class="space-y-3 mb-6 bg-white/5 p-4 rounded-2xl border border-white/5">
                 <p class="text-[10px] font-bold uppercase text-slate-400">Tambah Produk Baru</p>
-                <input type="text" id="p-name" placeholder="Nama Produk" class="w-full bg-black/40 border border-white/10 p-3 rounded-xl outline-none text-xs">
-                <input type="number" id="p-price" placeholder="Harga (Angka saja)" class="w-full bg-black/40 border border-white/10 p-3 rounded-xl outline-none text-xs">
-                <input type="text" id="p-img" placeholder="Link Gambar" class="w-full bg-black/40 border border-white/10 p-3 rounded-xl outline-none text-xs">
+                <input type="text" id="p-name" placeholder="Nama Produk" class="w-full bg-black/40 border border-white/10 p-3 rounded-xl outline-none text-xs text-white">
+                <input type="number" id="p-price" placeholder="Harga (Angka saja)" class="w-full bg-black/40 border border-white/10 p-3 rounded-xl outline-none text-xs text-white">
+                <input type="text" id="p-img" placeholder="Link Gambar (URL)" class="w-full bg-black/40 border border-white/10 p-3 rounded-xl outline-none text-xs text-white">
                 <button onclick="saveProduct()" class="w-full btn-green py-3 font-black uppercase text-[10px]">Simpan Produk</button>
             </div>
 
             <p class="text-[10px] font-bold uppercase text-slate-400 mb-2">Kelola Produk Aktif</p>
-            <div id="admin-product-list" class="space-y-3 max-h-[250px] overflow-y-auto pr-2"></div>
+            <div id="admin-product-list" class="space-y-4 max-h-[300px] overflow-y-auto pr-2"></div>
         </div>
     </div>
 
@@ -75,7 +76,7 @@
         <div class="modal-content">
             <span class="close-modal" onclick="closeModal()">&times;</span>
             <h2 class="text-2xl font-black mb-6 italic uppercase">Checkout</h2>
-            <input type="email" id="buyerEmail" placeholder="nama@email.com" class="w-full bg-white/5 border border-white/10 p-4 rounded-2xl mb-4 text-sm outline-none focus:border-green-500">
+            <input type="email" id="buyerEmail" placeholder="nama@email.com" class="w-full bg-white/5 border border-white/10 p-4 rounded-2xl mb-4 text-sm outline-none focus:border-green-500 text-white">
             <div class="bg-green-500/5 p-5 rounded-3xl border border-green-500/20 text-center mb-4">
                 <span id="totalDisplay" class="text-3xl font-black text-green-500">Rp 0</span>
             </div>
@@ -126,16 +127,24 @@
                         <button onclick="addToCart('${p.name}', ${p.price})" class="btn-green w-full py-3 text-[10px] font-black uppercase text-white">Add To Cart</button>
                     </div>`;
                 
-                // Tampilan Edit Admin
+                // Tampilan Edit Admin (SEKARANG BISA EDIT GAMBAR)
                 adminList.innerHTML += `
-                    <div class="bg-white/5 p-3 rounded-xl border border-white/5 space-y-2">
+                    <div class="bg-white/5 p-4 rounded-xl border border-white/5 space-y-3">
                         <div class="flex justify-between items-center text-[10px] font-bold">
-                            <span class="text-white uppercase">${p.name}</span>
+                            <span class="text-green-500 uppercase tracking-widest">${p.name}</span>
                             <button onclick="deleteProduct(${p.id})" class="text-red-500 hover:scale-110 transition"><i class="fa-solid fa-trash"></i></button>
                         </div>
-                        <div class="flex gap-2">
-                            <input type="number" value="${p.price}" onchange="updatePrice(${p.id}, this.value)" 
-                                class="w-full bg-black border border-white/10 p-2 rounded-lg text-[10px] outline-none focus:border-green-500" placeholder="Edit Harga">
+                        <div class="space-y-2">
+                            <div>
+                                <label class="text-[8px] uppercase text-slate-500 font-bold tracking-tighter">Link Gambar Baru:</label>
+                                <input type="text" value="${p.img}" onchange="updateImg(${p.id}, this.value)" 
+                                    class="w-full bg-black border border-white/10 p-2 rounded-lg text-[9px] outline-none focus:border-green-500 text-slate-300">
+                            </div>
+                            <div>
+                                <label class="text-[8px] uppercase text-slate-500 font-bold tracking-tighter">Harga Baru:</label>
+                                <input type="number" value="${p.price}" onchange="updatePrice(${p.id}, this.value)" 
+                                    class="w-full bg-black border border-white/10 p-2 rounded-lg text-[9px] outline-none focus:border-green-500 text-white">
+                            </div>
                         </div>
                     </div>`;
             });
@@ -156,12 +165,24 @@
             if(name && price && img) {
                 products.push({id: Date.now(), name, price, img});
                 saveDB();
+                document.getElementById('p-name').value = '';
+                document.getElementById('p-price').value = '';
+                document.getElementById('p-img').value = '';
+            } else {
+                alert("Isi semua data ya!");
             }
         }
 
         function updatePrice(id, newPrice) {
             const index = products.findIndex(p => p.id === id);
             products[index].price = parseInt(newPrice);
+            saveDB();
+        }
+
+        // FUNGSI BARU: UPDATE GAMBAR
+        function updateImg(id, newImg) {
+            const index = products.findIndex(p => p.id === id);
+            products[index].img = newImg;
             saveDB();
         }
 
@@ -187,6 +208,7 @@
         }
 
         function checkout() {
+            if(cart.length === 0) return alert("Keranjang masih kosong!");
             let total = cart.reduce((sum, i) => sum + i.price, 0);
             document.getElementById('totalDisplay').innerText = "Rp " + total.toLocaleString('id-ID');
             document.getElementById('paymentModal').style.display = "block";
