--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     <script>
         // CONFIG: Ubah password di sini
-        const ADMIN_PASS = "admin123";
+        const ADMIN_PASS = "Wira123";
 
         // DATA PRODUK (Membaca dari Memori Browser)
         let products = JSON.parse(localStorage.getItem('w4ras_db')) || [
