--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary-glow: #06b6d4; /* Cyan/Teal */
-            --secondary-glow: #10b981; /* Emerald */
+            --primary-glow: #06b6d4;
+            --secondary-glow: #10b981;
         }
 
         body { 
@@ -20,7 +20,6 @@
             min-height: 100vh;
         }
 
-        /* SHINY EFFECT & GLASSMORPHISM */
         .glass-nav { 
             background: rgba(10, 20, 20, 0.7); 
             backdrop-filter: blur(20px); 
@@ -43,7 +42,6 @@
             box-shadow: 0 10px 40px rgba(6, 182, 212, 0.15);
         }
 
-        /* EMERALD SHINY BUTTON */
         .btn-luxury { 
             background: linear-gradient(135deg, #0891b2 0%, #10b981 100%); 
             box-shadow: 0 4px 15px rgba(16, 185, 129, 0.3);
@@ -75,7 +73,6 @@
             padding: 14px; border-radius: 14px; outline: none; width: 100%; color: white; 
         }
 
-        /* TEXT SHINY */
         .shiny-text {
             background: linear-gradient(to right, #fff 20%, #22d3ee 50%, #fff 80%);
             -webkit-background-clip: text;
@@ -136,7 +133,7 @@
             <h2 class="text-3xl font-black text-cyan-400 italic">MASTER CONTROL</h2>
             <div class="flex gap-4">
                 <input type="password" id="webhook-url" placeholder="Discord Webhook URL" class="admin-input text-xs w-64">
-                <button onclick="location.reload()" class="bg-red-500/10 text-red-500 px-6 py-2 rounded-xl font-bold border border-red-500/20 hover:bg-red-500 hover:text-white transition">EXIT</button>
+                <button onclick="location.reload()" class="bg-red-500/10 text-red-500 px-6 py-2 rounded-xl font-bold border border-red-500/20 hover:bg-red-500 hover:text-white transition text-xs uppercase">Logout</button>
             </div>
         </div>
 
@@ -175,7 +172,7 @@
 
     <div id="cart-modal" class="fixed inset-0 bg-black/90 hidden z-[60] flex justify-end backdrop-blur-sm">
         <div class="bg-[#050a0a] w-full max-w-md h-full p-10 border-l border-cyan-500/20 flex flex-col shadow-2xl">
-            <h2 class="text-3xl font-black mb-10 italic uppercase tracking-tighter text-cyan-400">Cart</h2>
+            <h2 class="text-3xl font-black mb-10 italic uppercase tracking-tighter text-cyan-400">Your Cart</h2>
             <div id="cart-items" class="flex-1 overflow-y-auto space-y-4 pr-2"></div>
             <div class="border-t border-cyan-500/20 pt-8 mt-6">
                 <div class="flex justify-between text-3xl font-black mb-8 italic">
@@ -195,12 +192,12 @@
                 <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=GEAR_EMERALD_PAY" class="w-56 h-56">
             </div>
             <p class="text-slate-500 text-xs mb-8">Amount Due: <br><b class="text-slate-900 text-2xl font-black" id="qris-total">Rp 0</b></p>
-            <button onclick="finalizePayment()" class="w-full bg-[#10b981] text-white py-5 rounded-2xl font-black shadow-xl hover:scale-[1.02] transition active:scale-95">CONFIRM PAYMENT</button>
+            <button onclick="finalizePayment()" class="w-full bg-[#10b981] text-white py-5 rounded-2xl font-black shadow-xl hover:scale-[1.02] transition active:scale-95 uppercase">Confirm Payment</button>
         </div>
     </div>
 
     <script>
-        let products = JSON.parse(localStorage.getItem('gear_v13_data')) || [
+        let products = JSON.parse(localStorage.getItem('gear_v14_data')) || [
             { id: 1, name: "EMERALD STEAM", category: "FiveM", price: 15000, stock: 50, sold: 12, img: "https://via.placeholder.com/400" }
         ];
         let cart = [];
@@ -210,7 +207,7 @@
         function showToast(msg, type = "success") {
             const container = document.getElementById('toast-container');
             const toast = document.createElement('div');
-            toast.className = `${type === "success" ? "bg-cyan-600 shadow-[0_0_20px_rgba(6,182,212,0.4)]" : "bg-red-600"} text-white px-6 py-4 rounded-2xl toast-animate border border-white/10 flex items-center gap-3`;
+            toast.className = `${type === "success" ? "bg-cyan-600 shadow-[0_0_20px_rgba(6,182,212,0.4)]" : "bg-red-600"} text-white px-6 py-4 rounded-2xl toast-animate border border-white/10`;
             toast.innerHTML = `<span class="text-[10px] font-black uppercase tracking-widest">${msg}</span>`;
             container.appendChild(toast);
             setTimeout(() => { toast.style.opacity = "0"; setTimeout(() => toast.remove(), 400); }, 4000);
@@ -218,12 +215,12 @@
 
         window.addEventListener('keydown', (e) => {
             if(e.key === "F7") {
-                const p = prompt("ACCESS TOKEN:");
+                const p = prompt("MASTER KEY:");
                 if(p === MASTER_PASS) {
                     document.getElementById('shop-container').classList.add('hidden');
                     document.getElementById('admin-page').classList.remove('hidden');
                     renderAdmin();
-                    showToast("Master Control Unlocked");
+                    showToast("Admin Protocol Initialized");
                 }
             }
         });
@@ -239,19 +236,13 @@
             const list = document.getElementById('product-list');
             const search = document.getElementById('search-input').value.toLowerCase();
             list.innerHTML = '';
-            
-            const filtered = products.filter(p => {
-                const matchCat = currentCat === 'all' || p.category === currentCat;
-                const matchSearch = p.name.toLowerCase().includes(search);
-                return matchCat && matchSearch;
-            });
-
+            const filtered = products.filter(p => (currentCat === 'all' || p.category === currentCat) && p.name.toLowerCase().includes(search));
             filtered.forEach(p => {
                 const isOut = p.stock <= 0;
                 list.innerHTML += `
                     <div class="glass-card p-5 flex flex-col h-full group">
                         <div class="relative overflow-hidden rounded-2xl mb-6">
-                            <div class="absolute top-4 right-4 bg-cyan-500/80 backdrop-blur px-3 py-1 rounded-full text-[8px] font-black uppercase z-10 border border-white/20">${p.category}</div>
+                            <div class="absolute top-4 right-4 bg-cyan-500/80 backdrop-blur px-3 py-1 rounded-full text-[8px] font-black uppercase z-10">${p.category}</div>
                             <img src="${p.img}" class="w-full h-52 object-cover group-hover:scale-110 transition duration-700">
                         </div>
                         <h3 class="font-extrabold text-sm uppercase truncate mb-1 tracking-tight">${p.name}</h3>
@@ -260,8 +251,8 @@
                             <span class="text-[9px] text-gray-500 font-bold uppercase">Stock: ${p.stock}</span>
                             <span class="text-[9px] text-emerald-400 font-bold uppercase">Sold: ${p.sold}</span>
                         </div>
-                        <button onclick="addToCart(${p.id})" ${isOut ? 'disabled' : ''} class="w-full ${isOut ? 'bg-gray-800 cursor-not-allowed text-gray-500' : 'btn-luxury'} py-4 rounded-xl font-black text-[10px] uppercase tracking-widest italic transition">
-                            ${isOut ? 'OUT OF STOCK' : 'ADD TO GEAR'}
+                        <button onclick="addToCart(${p.id})" ${isOut ? 'disabled' : ''} class="w-full ${isOut ? 'bg-gray-800 cursor-not-allowed text-gray-500' : 'btn-luxury'} py-4 rounded-xl font-black text-[10px] uppercase tracking-widest italic">
+                            ${isOut ? 'UNAVAILABLE' : 'ADD TO GEAR'}
                         </button>
                     </div>`;
             });
@@ -271,13 +262,13 @@
             const url = document.getElementById('webhook-url').value;
             if(!url) return;
             const payload = {
-                username: "GEAR STORE ALERTS",
+                username: "STORE DISPATCH",
                 embeds: [{
-                    title: "💎 LUXURY ORDER CONFIRMED",
+                    title: "💎 NEW LUXURY ACQUISITION",
                     color: 0x06b6d4,
                     fields: [
-                        { name: "Order Details", value: cartItems.map(i => `• ${i.name} (x${i.qty})`).join('\n') },
-                        { name: "Total Revenue", value: `**Rp ${total.toLocaleString()}**` }
+                        { name: "Manifest", value: cartItems.map(i => `• ${i.name} (x${i.qty})`).join('\n') },
+                        { name: "Total Volume", value: `**Rp ${total.toLocaleString()}**` }
                     ],
                     timestamp: new Date()
                 }]
@@ -296,10 +287,11 @@
                 img: document.getElementById('p-img').value || "https://via.placeholder.com/400",
                 sold: id ? products.find(p => p.id == id).sold : 0
             };
+            if(!data.name || !data.price) return showToast("Missing Required Data", "error");
             if(id) products[products.findIndex(p => p.id == id)] = data;
             else products.push(data);
             saveData(); clearForm(); renderAdmin(); renderShop();
-            showToast("Vault Updated Successfully");
+            showToast("Database Updated");
         }
 
         function editProduct(id) {
@@ -310,13 +302,13 @@
             document.getElementById('p-price').value = p.price;
             document.getElementById('p-stock').value = p.stock;
             document.getElementById('p-img').value = p.img;
-            document.getElementById('form-title').innerText = "Update Gear Info";
+            document.getElementById('form-title').innerText = "Update Gear";
             document.getElementById('btn-cancel').classList.remove('hidden');
         }
 
         function restock(id) {
             const p = products.find(x => x.id === id);
-            const add = prompt(`Add stock for ${p.name}:`, "0");
+            const add = prompt(`Replenish stock for ${p.name}:`, "0");
             if (add) { p.stock += parseInt(add); saveData(); renderAdmin(); renderShop(); showToast("Supply Replenished"); }
         }
 
@@ -337,13 +329,13 @@
                 tbody.innerHTML += `
                     <tr class="border-b border-white/5 hover:bg-cyan-500/[0.02] transition">
                         <td class="p-5 uppercase font-extrabold text-xs text-slate-300">
-                            ${p.name} <br> <span class="text-cyan-500 text-[8px] tracking-[0.2em] font-black italic">${p.category}</span>
+                            ${p.name} <br> <span class="text-cyan-500 text-[8px] tracking-[0.2em] italic">${p.category}</span>
                         </td>
-                        <td class="p-5 text-center text-xs font-black text-emerald-400 italic">${p.stock}</td>
+                        <td class="p-5 text-center text-xs font-black text-emerald-400">${p.stock}</td>
                         <td class="p-5 text-right space-x-4">
-                            <button onclick="restock(${p.id})" class="text-emerald-400 font-black text-[9px] hover:scale-110 transition">REPLENISH</button>
-                            <button onclick="editProduct(${p.id})" class="text-cyan-400 font-black text-[9px] hover:scale-110 transition">MOD</button>
-                            <button onclick="deleteP(${p.id})" class="text-red-500 font-black text-[9px] hover:scale-110 transition">PURGE</button>
+                            <button onclick="restock(${p.id})" class="text-emerald-400 font-black text-[9px]">STOCK</button>
+                            <button onclick="editProduct(${p.id})" class="text-cyan-400 font-black text-[9px]">EDIT</button>
+                            <button onclick="deleteP(${p.id})" class="text-red-500 font-black text-[9px]">DELETE</button>
                         </td>
                     </tr>`;
             });
@@ -354,9 +346,9 @@
             const item = cart.find(i => i.id === id);
             if(item) {
                 if(item.qty < p.stock) item.qty++;
-                else return showToast("Limited supply reached", "error");
+                else return showToast("Out of supply", "error");
             } else { cart.push({...p, qty: 1}); }
-            updateCartUI(); showToast("Gear Added to Cart");
+            updateCartUI(); showToast("Gear Logged in Cart");
         }
 
         function updateCartUI() {
@@ -375,8 +367,8 @@
                         </div>
                     </div>`;
             });
-            document.getElementById('cart-count').innerText = cart.reduce((a,b) => a + b.qty, 0);
             document.getElementById('cart-total').innerText = total.toLocaleString();
+            document.getElementById('cart-count').innerText = cart.reduce((a,b) => a + b.qty, 0);
         }
 
         function manualQty(idx, val) {
@@ -407,14 +399,14 @@
             const total = cart.reduce((a, b) => a + (b.price * b.qty), 0);
             sendWebhook(cart, total);
             cart.forEach(c => { const p = products.find(o => o.id === c.id); p.stock -= c.qty; p.sold += c.qty; });
-            saveData(); showToast("Gear Delivered Successfully!"); cart = []; updateCartUI();
+            saveData(); showToast("Acquisition Complete"); cart = []; updateCartUI();
             document.getElementById('qris-modal').classList.add('hidden');
             document.getElementById('cart-modal').classList.add('hidden');
             renderShop();
         }
 
-        function deleteP(id) { if(confirm("Purge this gear?")) { products = products.filter(p => p.id != id); saveData(); renderAdmin(); renderShop(); } }
-        function saveData() { localStorage.setItem('gear_v13_data', JSON.stringify(products)); }
+        function deleteP(id) { if(confirm("Purge from system?")) { products = products.filter(p => p.id != id); saveData(); renderAdmin(); renderShop(); } }
+        function saveData() { localStorage.setItem('gear_v14_data', JSON.stringify(products)); }
         function toggleCart() { document.getElementById('cart-modal').classList.toggle('hidden'); }
 
         renderShop();
