--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>W4RAS STORE | V25.0 ULTIMATE FIX</title>
+    <title>W4RAS STORE | V27.0 QRIS FIX</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
@@ -11,14 +11,15 @@
         .glass { background: rgba(255, 255, 255, 0.03); border: 1px solid rgba(255, 255, 255, 0.1); backdrop-filter: blur(15px); }
         .btn-premium { background: linear-gradient(135deg, #08b291 0%, #10b981 100%); transition: 0.3s; cursor: pointer; border: none; }
         .input-elite { background: rgba(0,0,0,0.4); border: 1px solid rgba(255,255,255,0.1); padding: 12px; border-radius: 12px; outline: none; width: 100%; color: white; font-size: 12px; }
-        .modal-blur { backdrop-filter: blur(20px); background: rgba(0,0,0,0.95); display: none; position: fixed; inset: 0; z-index: 100; align-items: center; justify-content: center; padding: 20px; }
+        .modal-blur { backdrop-filter: blur(20px); background: rgba(0,0,0,0.9); display: none; position: fixed; inset: 0; z-index: 100; align-items: center; justify-content: center; padding: 20px; }
         
         /* GEMBOK ADMIN KIRI BAWAH */
         #admin-trigger { position: fixed; bottom: 20px; left: 20px; width: 35px; height: 35px; background: rgba(255,255,255,0.05); border-radius: 50%; display: flex; align-items: center; justify-content: center; cursor: pointer; z-index: 10000; opacity: 0.2; transition: 0.3s; }
         #admin-trigger:hover { opacity: 1; background: #10b981; }
 
-        /* QRIS FRAME 250x250 - LINK LANGSUNG */
-        .qris-frame { width: 250px; height: 250px; object-fit: contain; margin: 15px auto; background: white; border-radius: 15px; border: 4px solid #10b981; display: block; }
+        /* QRIS FRAME 250x250 FIXED */
+        .qris-container { width: 250px; height: 250px; margin: 15px auto; background: white; border-radius: 15px; border: 4px solid #10b981; overflow: hidden; display: flex; align-items: center; justify-content: center; }
+        .qris-img { width: 100%; height: 100%; object-fit: contain; }
 
         #toast-container { position: fixed; bottom: 80px; left: 20px; z-index: 9999; display: flex; flex-direction: column; gap: 8px; }
         .toast-card { background: #0a0a0a; border-left: 4px solid #10b981; padding: 12px 20px; border-radius: 10px; }
@@ -43,7 +44,7 @@
     <div id="shop-view" class="max-w-7xl mx-auto px-6 py-8 w-full">
         <div class="p-8 mb-6 rounded-[2.5rem] border border-emerald-500/20 bg-emerald-500/5">
             <h1 class="text-3xl font-black italic uppercase">W4RAS <span class="text-emerald-400">DASHBOARD</span></h1>
-            <marquee class="text-[10px] text-emerald-400/50 font-bold mt-2 italic uppercase">V25.0: QRIS FIXED - SEMUA FITUR AKTIF - KLIK ICON GEMBOK KIRI BAWAH UNTUK ADMIN</marquee>
+            <marquee class="text-[10px] text-emerald-400/50 font-bold mt-2">V27.0: QRIS DISCORD LINK UPDATED - ADMIN LOCK LEFT BOTTOM - ALL FEATURES READY</marquee>
         </div>
 
         <div class="flex flex-col md:flex-row gap-4 mb-8">
@@ -56,24 +57,27 @@
 
     <div id="payment-modal" class="modal-blur">
         <div class="glass p-8 rounded-[3rem] max-w-sm w-full text-center border-white/10">
-            <h2 class="text-lg font-black text-emerald-400 mb-2 uppercase italic">Scan QRIS Berikut</h2>
-            <img src="https://files.catbox.moe/g2unv4.png" class="qris-frame" alt="QRIS W4RAS">
+            <h2 class="text-lg font-black text-emerald-400 mb-2 uppercase italic">Selesaikan Pembayaran</h2>
+            <div class="qris-container">
+                <img src="https://cdn.discordapp.com/attachments/1457989439694311519/1471880949603106992/Untitled_design.png?ex=69908b74&is=698f39f4&hm=db211f4d8e05980e51ea8b4820cd9a21130e8caf5ca2f83dc16e3b954365f9a9&" 
+                     class="qris-img" alt="QRIS W4RAS">
+            </div>
             <div class="text-3xl font-black text-emerald-400 mb-6" id="total-tagihan">Rp 0</div>
             <input type="file" id="evidence-file" class="hidden" onchange="updateFileName()">
             <label for="evidence-file" id="file-label" class="cursor-pointer block p-4 border-2 border-dashed border-white/10 rounded-2xl text-[10px] text-gray-400 mb-4 uppercase font-bold">Upload Bukti Transfer</label>
             <button onclick="sendToDiscord()" class="w-full btn-premium py-4 rounded-2xl font-black text-xs uppercase">Konfirmasi Pembayaran</button>
-            <button onclick="closeModal('payment-modal')" class="text-[10px] text-gray-400 mt-4 uppercase font-bold">Batalkan</button>
+            <button onclick="closeModal('payment-modal')" class="text-[10px] text-gray-400 mt-4 uppercase font-bold">Batal</button>
         </div>
     </div>
 
     <div id="cart-modal" class="modal-blur">
         <div class="glass p-8 rounded-[2.5rem] max-w-md w-full border-white/10">
-            <h2 class="text-xl font-black text-emerald-400 mb-6 uppercase italic">Keranjang Belanja</h2>
+            <h2 class="text-xl font-black text-emerald-400 mb-6 uppercase italic">Keranjang</h2>
             <div id="cart-items-list" class="space-y-3 mb-6"></div>
             <div class="flex justify-between font-black text-xl mb-6 pt-4 border-t border-white/10">
                 <span>Total:</span> <span id="cart-subtotal" class="text-emerald-400">Rp 0</span>
             </div>
-            <button onclick="checkout()" class="w-full btn-premium py-4 rounded-2xl font-black text-[10px] uppercase">Lanjut Bayar</button>
+            <button onclick="checkout()" class="w-full btn-premium py-4 rounded-2xl font-black text-[10px] uppercase">Lanjut Ke Pembayaran</button>
             <button onclick="closeModal('cart-modal')" class="w-full mt-2 text-[10px] text-gray-500 uppercase font-bold">Tutup</button>
         </div>
     </div>
@@ -130,7 +134,7 @@
             if(document.getElementById('adm-user').value === "admin" && document.getElementById('adm-pass').value === "admin123") {
                 closeModal('login-modal'); document.getElementById('shop-view').classList.add('hidden');
                 document.getElementById('admin-view').classList.remove('hidden'); renderAdmin();
-            } else { showToast("Gagal!", "error"); }
+            } else { showToast("Akses Ditolak!", "error"); }
         }
 
         function renderShop() {
@@ -182,8 +186,7 @@
         async function sendToDiscord() {
             const f = document.getElementById('evidence-file').files[0];
             const wb = localStorage.getItem('w4ras_wb');
-            if(!wb || !f) return showToast("Lengkapi Bukti!", "error");
-
+            if(!wb || !f) return showToast("Upload Bukti Transfer!", "error");
             const reader = new FileReader(); reader.readAsDataURL(f);
             reader.onload = async () => {
                 let accData = "";
@@ -201,7 +204,7 @@
                 fd.append('file', f, 'bukti.png');
                 await fetch(wb, { method: 'POST', body: fd });
                 localStorage.setItem('w4ras_db_final', JSON.stringify(products));
-                showToast("Berhasil!"); location.reload();
+                showToast("Pesanan Terkonfirmasi!"); location.reload();
             };
         }
 
@@ -222,7 +225,7 @@
 
         function deleteP(id) { products = products.filter(x => x.id != id); localStorage.setItem('w4ras_db_final', JSON.stringify(products)); renderAdmin(); }
         function saveConfig() { localStorage.setItem('w4ras_wb', document.getElementById('webhook-url').value); showToast("Webhook Disimpan!"); }
-        function updateFileName() { document.getElementById('file-label').innerText = "BUKTI SIAP ✓"; }
+        function updateFileName() { document.getElementById('file-label').innerText = "BUKTI TERPILIH ✓"; }
 
         renderShop();
     </script>
