--- a/index.html
+++ b/index.html
@@ -318,5 +318,13 @@
             renderShop();
         };
     </script>
+
+    <button onclick="openModal('login-modal')" class="fixed bottom-24 left-6 z-50 glass-box p-4 border-white/10 hover:border-emerald-500 transition shadow-lg">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3">
+        <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+        <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+    </svg>
+</button>
+    
 </body>
 </html>
